Add toggle link for status col. in chrome://policy

The patch adds the same overflow behaviour to the status column as
the value column. If the text doesn't fit the column width it will be
replaced with a link that toggles the visibility of a row containing
the full status text.

Bug: 747851
Change-Id: I628666586481239e655b5c98f86bb3f719c4e9bf
Reviewed-on: https://chromium-review.googlesource.com/c/1371477
Commit-Queue: Andreea-Elena Costinas <acostinas@google.com>
Reviewed-by: Julian Pastarmov <pastarmovj@chromium.org>
Reviewed-by: A Olsen <olsen@chromium.org>
Reviewed-by: Dan Beam <dbeam@chromium.org>
Reviewed-by: Ivan Šandrk <isandrk@chromium.org>
Cr-Commit-Position: refs/heads/master@{#619153}
Former-commit-id: 22de452e00724282c0213c84260e4430f521b767